--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "main": "./out/node/htmlServerMain",
   "dependencies": {
-    "vscode-css-languageservice": "4.3.0-next.2",
-    "vscode-html-languageservice": "3.1.0-next.2",
+    "vscode-css-languageservice": "^4.3.0-next.3",
+    "vscode-html-languageservice": "^3.1.0-next.3",
     "vscode-languageserver": "7.0.0-next.3",
     "vscode-nls": "^4.1.2",
     "vscode-uri": "^2.1.2"
